--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Simple Quiz</h1>
     <div class = "quiz">
         <h2 id="question">Question goes here</h2>
-        <div id = "answer-button">
+        <div id = "answer-buttons">
             <button class ="btn">Answer 1</button>
             <button class ="btn">Answer 2</button>
             <button class ="btn">Answer 3</button>
@@ -20,5 +20,6 @@
         <button id="next-btn">next</button>
     </div>
 </div>
+<script src="script.js"></script>
 </body>
 </html>
